==> gloomyandy/CoreSTM32F4/FreeRTOS/FreeRTOS-Plus-TCP/portable/NetworkInterface/LPC17xx/NetworkInterface.c <==
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include "FreeRTOS.h"
#include "task.h"
#include "queue.h"
#include "semphr.h"
#include "FreeRTOS_IP.h"
#include "FreeRTOS_Sockets.h"
#include "FreeRTOS_IP_Private.h"
#include "NetworkBufferManagement.h"
#include "NetworkInterface.h"
#include "chip.h"
#include "enet_17xx_40xx.h"
#include "lpc_phy.h"
#define nwRX_TASK_STACK_SIZE	140
    #define    EMAC_MAX_BLOCK_TIME_MS    100ul
	#define PHY_LS_HIGH_CHECK_TIME_MS	5000
	#define PHY_LS_LOW_CHECK_TIME_MS	1000
	#define configUSE_RMII 1
	#define iptraceEMAC_TASK_STARTING()	do { } while( 0 )
#define nwRX_STATUS_ERROR_BITS \
    (   ENET_RINFO_CRC_ERR | \
        ENET_RINFO_SYM_ERR | \
        ENET_RINFO_LEN_ERR | \
        ENET_RINFO_ALIGN_ERR | \
        ENET_RINFO_OVERRUN )
#define nwDMA_INTERRUPT_MASK \
(\
    ENET_INT_RXOVERRUN      /* Overrun Error in RX Queue */   | \
    ENET_INT_RXERROR        /* Receive Error */               | \
    ENET_INT_RXDONE         /* Receive Done */                | \
    ENET_INT_TXUNDERRUN     /* Transmit Underrun */           | \
    ENET_INT_TXERROR        /* Transmit Error */              | \
    ENET_INT_TXDONE )        /* Transmit Done */
#define EMAC_IF_RX_EVENT        1UL
#define EMAC_IF_TX_EVENT        2UL
#define EMAC_IF_ERR_EVENT       4UL
#define EMAC_IF_ALL_EVENT       ( EMAC_IF_RX_EVENT | EMAC_IF_TX_EVENT | EMAC_IF_ERR_EVENT )
 	#define ipCONSIDER_FRAME_FOR_PROCESSING( pucEthernetBuffer ) eProcessBuffer

BaseType_t xNetworkInterfaceInitialise( void )
{
BaseType_t xReturn = pdPASS;
static BaseType_t xHasInitialised = pdFALSE;

	if( xHasInitialised == pdFALSE )
	{
		xHasInitialised = pdTRUE;

		/* The interrupt will be turned on when a link is established. */
		NVIC_DisableIRQ( ETHERNET_IRQn );

        #if( configUSE_RMII == 1 )
            Chip_ENET_Init(LPC_ETHERNET, true);
        #else
            Chip_ENET_Init(LPC_ETHERNET, false);
        #endif
        
        //by default Chip_ENET_Init will set frame size to max it can handle
        //so we will set if based on the value we get from +TCP
        LPC_ETHERNET->MAC.MAXF = ipTOTAL_ETHERNET_FRAME_SIZE;
        //LPC_ETHERNET->MAC.MAXF = ENET_ETH_MAX_FLEN;

        /* Setup MII clock rate and PHY address */
        Chip_ENET_SetupMII(LPC_ETHERNET, Chip_ENET_FindMIIDiv(LPC_ETHERNET, 2500000), 1);

        /* Save MAC address. */
		Chip_ENET_SetADDR( LPC_ETHERNET, ucMACAddress );

        /* Clear all MAC address hash entries. */
        LPC_ETHERNET->RXFILTER.HashFilterH = 0;
        LPC_ETHERNET->RXFILTER.HashFilterL = 0;
        
        #if( ipconfigUSE_LLMNR == 1 )
        {
            EMAC_SetHashFilter(xLLMNR_MACAddress);
        }
        #endif /* ipconfigUSE_LLMNR == 1 */

        
		#if( configUSE_RMII == 1 )
		{
			if( lpc_phy_init( pdTRUE, prvDelay ) != SUCCESS )
			{
				xReturn = pdFAIL;
                FreeRTOS_debug_printf( ( "\nxNetworkInterfaceInitialise(): Init Phy FAILED!!\n" ) );
            } else {
                FreeRTOS_debug_printf( ( "\nxNetworkInterfaceInitialise(): Init Phy Success!!\n" ) );
            }
		}
		#else
		{
			#warning This path has not been tested.
			if( lpc_phy_init( pdFALSE, prvDelay ) != SUCCESS )
			{
				xReturn = pdFAIL;
			}
		}
		#endif

        
        uint16_t rxFilter = 0;
        rxFilter |= ENET_RXFILTERCTRL_APE; //Accept perfect match
        rxFilter |= ENET_RXFILTERCTRL_ABE; //Accept broadcast
        #if (ipconfigUSE_LLMNR)
        {
            rxFilter |= ENET_RXFILTERCTRL_AMHE;//Accept Multicast hash
        }
        #endif

        Chip_ENET_EnableRXFilter(LPC_ETHERNET, rxFilter);
        
        //If Hardware initialised correctly, initialise descriptors etc
		if( xReturn == pdPASS )
		{
			if( xTXDescriptorSemaphore == NULL )
			{
				/* Create a counting semaphore, with a value of 'configNUM_TX_DESCRIPTORS'
				and a maximum of 'configNUM_TX_DESCRIPTORS'. */
				xTXDescriptorSemaphore = xSemaphoreCreateCounting( ( UBaseType_t ) configNUM_TX_DESCRIPTORS, ( UBaseType_t ) configNUM_TX_DESCRIPTORS );
				configASSERT( xTXDescriptorSemaphore );
			}

            /* Auto-negotiate was already started.  Wait for it to complete. */
            xReturn = prvSetLinkSpeed();
            
            /* Initialise the descriptors. */
            prvSetupTxDescriptors();
            prvSetupRxDescriptors();

            /* lpc17xx Enable RX/TX after descriptors are setup */
            Chip_ENET_TXEnable(LPC_ETHERNET);
            Chip_ENET_RXEnable(LPC_ETHERNET);
            
            /* Enable MAC interrupts. */
            Chip_ENET_EnableInt(LPC_ETHERNET, nwDMA_INTERRUPT_MASK);

            /* Enable interrupts in the NVIC now the task is created. */
            NVIC_SetPriority( ETHERNET_IRQn, configMAC_INTERRUPT_PRIORITY );
            NVIC_EnableIRQ( ETHERNET_IRQn );

            
			/* Guard against the task being created more than once and the
			descriptors being initialised more than once. */
			if( xRxHanderTask == NULL )
			{
				//xReturn = xTaskCreate( prvEMACHandlerTask, "EMAC", nwRX_TASK_STACK_SIZE, NULL, configMAX_PRIORITIES - 1, &xRxHanderTask );
                xRxHanderTask = RRfInitialiseEMACTask(prvEMACHandlerTask);
                configASSERT( xRxHanderTask != NULL ); // ensure the Task was created
			}
		}
	}

	/* Once prvEMACHandlerTask() has started, the variable
	'ulPHYLinkStatus' will be updated by that task. 
	The IP-task will keep on calling this function untill
	it finally returns pdPASS.
	Only then can the DHCP-procedure start (if configured). */
	if( ( ulPHYLinkStatus & PHY_LINK_CONNECTED ) != 0 )
	{
		xReturn = pdPASS;
	}
	else
	{
		xReturn = pdFAIL;

	}
    

	return xReturn;
}

configPLACE_IN_SECTION_RAM
static void vClearTXBuffers()
{
uint32_t ulLastDescriptor = ulNextFreeTxDescriptor;
size_t uxCount = ( ( size_t ) configNUM_TX_DESCRIPTORS ) - uxSemaphoreGetCount( xTXDescriptorSemaphore );
#if( ipconfigZERO_COPY_TX_DRIVER != 0 )
	NetworkBufferDescriptor_t *pxNetworkBuffer;
	uint8_t *ucPayLoad;
#endif

    /* This function is called after a TX-completion interrupt.
    It will release each Network Buffer used in xNetworkInterfaceOutput().
    'uxCount' represents the number of descriptors given to DMA for transmission.*/
    
    
    while( uxCount > ( size_t ) 0u )

    {
        if( ( ulTxDescriptorToClear == ulLastDescriptor ) && ( uxCount != ( size_t ) configNUM_TX_DESCRIPTORS ) )
        {
            break;
        }

        #if( ipconfigZERO_COPY_TX_DRIVER != 0 )
        {
            ucPayLoad = ( uint8_t * )xDMATxDescriptors[ ulTxDescriptorToClear ].Packet;
            if( ucPayLoad != NULL )
            {
                /* Packet points to a pucEthernetBuffer of a Network Buffer descriptor. */
                pxNetworkBuffer = pxPacketBuffer_to_NetworkBuffer( ucPayLoad );

                configASSERT( pxNetworkBuffer != NULL );

                vReleaseNetworkBufferAndDescriptor( pxNetworkBuffer ) ;
                xDMATxDescriptors[ ulTxDescriptorToClear ].Packet = ( uint32_t )0u;
            }
        }
        #endif /* ipconfigZERO_COPY_TX_DRIVER */

        /* Move onto the next descriptor, wrapping if necessary. */
        ulTxDescriptorToClear++;
        if( ulTxDescriptorToClear >= configNUM_TX_DESCRIPTORS )
        {
            ulTxDescriptorToClear = 0;
        }

        uxCount--;
        /* Tell the counting semaphore that one more TX descriptor is available. */
        xSemaphoreGive( xTXDescriptorSemaphore );
    }
}

configPLACE_IN_SECTION_RAM
BaseType_t xNetworkInterfaceOutput( NetworkBufferDescriptor_t * const pxDescriptor, BaseType_t bReleaseAfterSend )
{
BaseType_t xReturn = pdFAIL;
const TickType_t xBlockTimeTicks = pdMS_TO_TICKS( 50 );

    /* Attempt to obtain access to a Tx descriptor. */
    do
    {
        if( xTXDescriptorSemaphore == NULL )
        {
            break;
        }
        if( xSemaphoreTake( xTXDescriptorSemaphore, xBlockTimeTicks ) != pdPASS )
        {
            /* Time-out waiting for a free TX descriptor. */
            break;
        }
        
        uint16_t consumeIndex = Chip_ENET_GetTXConsumeIndex(LPC_ETHERNET);
        uint16_t produceIndex = Chip_ENET_GetTXProduceIndex(LPC_ETHERNET);

        //See if there is any Free TX slots left
        if(Chip_ENET_GetFreeDescNum(LPC_ETHERNET, produceIndex, consumeIndex, configNUM_TX_DESCRIPTORS) == 0)
        {
            /* The semaphore was taken, the TX DMA-descriptor is still not available.
            Actually that should not occur, as it was already confirmed free in vClearTXBuffers(). */
            xSemaphoreGive( xTXDescriptorSemaphore );
        }
        else
        {
            
            #if( ipconfigZERO_COPY_TX_DRIVER != 0 )
            {
                /* bReleaseAfterSend should always be set when using the zero copy driver. */
                configASSERT( bReleaseAfterSend != pdFALSE );

                /* The DMA's descriptor to point directly to the data in the
                network buffer descriptor.  The data is not copied. */
                xDMATxDescriptors[ produceIndex ].Packet = ( uint32_t ) pxDescriptor->pucEthernetBuffer;
                
                /* The DMA descriptor will 'own' this Network Buffer, until it has been sent.  So don't release it now. */
                bReleaseAfterSend = pdFALSE;
            }
            #else
            {
                /* The data is copied from the network buffer descriptor into the DMA's descriptor. */
                memcpy( ( void * ) xDMATxDescriptors[ produceIndex ].Packet, ( void * ) pxDescriptor->pucEthernetBuffer, pxDescriptor->xDataLength );
            }
            #endif

            //TX Control options:
            //ENET_TCTRL_SIZE(n)       Size of data buffer in bytes
            //ENET_TCTRL_OVERRIDE      Override Default MAC Registers
            //ENET_TCTRL_HUGE          Enable Huge Frame
            //ENET_TCTRL_PAD           Pad short Frames to 64 bytes
            //ENET_TCTRL_CRC           Append a hardware CRC to Frame
            //ENET_TCTRL_LAST          Last Descriptor for TX Frame
            //ENET_TCTRL_INT           Generate TxDone Interrupt
            xDMATxDescriptors[produceIndex].Control = ENET_TCTRL_SIZE(pxDescriptor->xDataLength) | ENET_TCTRL_PAD | ENET_TCTRL_INT  | ENET_TCTRL_CRC | ENET_TCTRL_LAST; // size and generate interrupt and last descriptor (SD::last cause tcpip library is handing the packetisation and we will always get a size which fits our MTU)
            
            Chip_ENET_IncTXProduceIndex(LPC_ETHERNET); //trigger buffer to transmit...increase the TXProduceIndex
            
            /* This descriptor is given back to the DMA. */

            iptraceNETWORK_INTERFACE_TRANSMIT();

            //
            /* Move onto the next descriptor, wrapping if necessary. */
            ulNextFreeTxDescriptor++;
            if( ulNextFreeTxDescriptor >= configNUM_TX_DESCRIPTORS )
            {
                ulNextFreeTxDescriptor = 0;
            }

            /* The Tx has been initiated. */
            xReturn = pdPASS;
        }
    } while( 0 );

    /* The buffer has been sent so can be released. */
    if( bReleaseAfterSend != pdFALSE )
    {
        vReleaseNetworkBufferAndDescriptor( pxDescriptor );
    }

	return xReturn;
}

configPLACE_IN_SECTION_RAM
BaseType_t xGetPhyLinkStatus( void )
{
BaseType_t xReturn;
    
	if( ( ulPHYLinkStatus & PHY_LINK_CONNECTED ) == 0 )
	{
		xReturn = pdFALSE;
	}
	else
	{
		xReturn = pdTRUE;
	}

	return xReturn;
}

configPLACE_IN_SECTION_RAM
static BaseType_t prvNetworkInterfaceInput()
{
    BaseType_t xResult = pdFALSE;
    uint32_t ulStatus;
    eFrameProcessingResult_t eResult;
    const TickType_t xDescriptorWaitTime = pdMS_TO_TICKS( 50u );
    const UBaseType_t uxMinimumBuffersRemaining = configNUM_TX_DESCRIPTORS;

    uint16_t usLength;
    NetworkBufferDescriptor_t *pxDescriptor;
#if( ipconfigZERO_COPY_RX_DRIVER != 0 )
    NetworkBufferDescriptor_t *pxNewDescriptor;
#endif /* ipconfigZERO_COPY_RX_DRIVER */
    IPStackEvent_t xRxEvent = { eNetworkRxEvent, NULL };

    //uint16_t produceIdx = Chip_ENET_GetRXProduceIndex(LPC_ETHERNET);
    
    if (!Chip_ENET_IsRxEmpty(LPC_ETHERNET))
    {
        uint16_t consumeIdx = Chip_ENET_GetRXConsumeIndex(LPC_ETHERNET);

        //packet is waiting to be processed
        ulStatus = xDMARxStatuses[ consumeIdx ].StatusInfo; //get status about packet

#if defined(COLLECT_NETDRIVER_ERROR_STATS)
        if(ulStatus & ENET_RINFO_CRC_ERR ) numNetworkCRCErrors++;
        if(ulStatus & ENET_RINFO_SYM_ERR ) numNetworkSYMErrors++;
        if(ulStatus & ENET_RINFO_LEN_ERR ) numNetworkLENErrors++;
        if(ulStatus & ENET_RINFO_ALIGN_ERR ) numNetworkALIGNErrors++;
        if(ulStatus & ENET_RINFO_OVERRUN ) numNetworkOVERRUNErrors++;
#endif

        
        /* Check packet for errors */
        if( ( ulStatus & nwRX_STATUS_ERROR_BITS ) != 0 )
        {
            /* There is some reception error. Will be dropped. */
        }
        else
        {
            xResult++;

            eResult = ipCONSIDER_FRAME_FOR_PROCESSING( ( const uint8_t * const ) ( xDMARxDescriptors[ consumeIdx ].Packet ) );

            
            
            
            if( eResult == eProcessBuffer )
            {
                if( ( ulPHYLinkStatus & PHY_LINK_CONNECTED ) == 0 )
                {
                    ulPHYLinkStatus |= PHY_LINK_CONNECTED;
                }

            #if( ipconfigZERO_COPY_RX_DRIVER != 0 )
                if( uxGetNumberOfFreeNetworkBuffers() > uxMinimumBuffersRemaining )
                {
                    pxNewDescriptor = pxGetNetworkBufferWithDescriptor( BUFFER_SIZE, xDescriptorWaitTime );
                }
                else
                {
                    /* Too risky to allocate a new Network Buffer. */
                    pxNewDescriptor = NULL;
                }
                if( pxNewDescriptor != NULL )
            #else
                if( uxGetNumberOfFreeNetworkBuffers() > uxMinimumBuffersRemaining )
            #endif /* ipconfigZERO_COPY_RX_DRIVER */
                {
                    
            #if( ipconfigZERO_COPY_RX_DRIVER != 0 )
                const uint8_t *pucBuffer;
            #endif

                    /* Get the actual length. */
                    usLength = ENET_RINFO_SIZE( ulStatus );
                    //FreeRTOS_debug_printf( ( "prvNetworkInterfaceInput: Pkt len: %d\n", usLength  ));

                    #if( ipconfigZERO_COPY_RX_DRIVER != 0 )
                    {
                        /* Replace the character buffer 'Packet'. */
                        pucBuffer = ( const uint8_t * const ) ( xDMARxDescriptors[ consumeIdx ].Packet );
                        xDMARxDescriptors[ consumeIdx ].Packet = ( uint32_t ) pxNewDescriptor->pucEthernetBuffer;

                        /* 'Packet' contained the address of a 'pucEthernetBuffer' that
                        belongs to a Network Buffer.  Find the original Network Buffer. */
                        pxDescriptor = pxPacketBuffer_to_NetworkBuffer( pucBuffer );
                        /* This zero-copy driver makes sure that every 'xDMARxDescriptors' contains
                        a reference to a Network Buffer at any time.
                        In case it runs out of Network Buffers, a DMA buffer won't be replaced,
                        and the received messages is dropped. */
                        configASSERT( pxDescriptor != NULL );
                    }
                    #else
                    {
                        /* Create a buffer of exactly the required length. */
                        pxDescriptor = pxGetNetworkBufferWithDescriptor( usLength, xDescriptorWaitTime );
                    }
                    #endif /* ipconfigZERO_COPY_RX_DRIVER */

                    if( pxDescriptor != NULL )
                    {
                        pxDescriptor->xDataLength = ( size_t ) usLength;
                        #if( ipconfigZERO_COPY_RX_DRIVER == 0 )
                        {
                            /* Copy the data into the allocated buffer. */
                            memcpy( ( void * ) pxDescriptor->pucEthernetBuffer, ( void * ) xDMARxDescriptors[ consumeIdx ].Packet, usLength );
                        }
                        #endif /* ipconfigZERO_COPY_RX_DRIVER */
                        /* It is possible that more data was copied than
                        actually makes up the frame.  If this is the case
                        adjust the length to remove any trailing bytes. */
                        prvRemoveTrailingBytes( pxDescriptor );

                        /* Pass the data to the TCP/IP task for processing. */
                        xRxEvent.pvData = ( void * ) pxDescriptor;
                        
                        if( xSendEventStructToIPTask( &xRxEvent, xDescriptorWaitTime ) == pdFALSE )
                        {
                            /* Could not send the descriptor into the TCP/IP
                            stack, it must be released. */
                            numRejectedStackPackets++;
                            vReleaseNetworkBufferAndDescriptor( pxDescriptor );
                            iptraceETHERNET_RX_EVENT_LOST();
                        }
                        else
                        {
                            iptraceNETWORK_INTERFACE_RECEIVE();
                        }
                    }
                }
                else
                {
                    // could not allocate a buffer, dropping packet
# if defined(COLLECT_NETDRIVER_ERROR_STATS)
                    numNetworkDroppedPacketsDueToNoBuffer++;
#endif
                }
            } else {
                //frame dropped, wasnt for us
                
                
            }
        } /* if( ( ulStatus & nwRX_STATUS_ERROR_BITS ) != 0 ) */
        
        
        /* Got here because received data was sent to the IP task or the
         data contained an error and was discarded.  Give the descriptor
         back to the DMA. */

        //reset the StatusInfo and HashCRC
        xDMARxStatuses[ consumeIdx ].StatusInfo = 0xFFFFFFFF;
        xDMARxStatuses[ consumeIdx ].StatusHashCRC = 0xFFFFFFFF;
        
        Chip_ENET_IncRXConsumeIndex(LPC_ETHERNET); //Update consume index

    }
    else{

    }

	return xResult;
}
