==> Infineon/amazon-freertos/libraries/freertos_plus/standard/freertos_plus_tcp/source/portable/NetworkInterface/XMC4/NetworkInterface.c <==
#include <limits.h>
#include "FreeRTOS.h"
#include "list.h"
#include "semphr.h"
#include "FreeRTOS_IP.h"
#include "FreeRTOS_IP_Private.h"
#include "NetworkBufferManagement.h"
#include "ethernet.h"
#include "NetworkInterface.h"
#define MAC_ADDR    ((uint64_t)configMAC_ADDR0 | \
                     ((uint64_t)configMAC_ADDR1 << 8) | \
                     ((uint64_t)configMAC_ADDR2 << 16) | \
                     ((uint64_t)configMAC_ADDR3 << 24) | \
                     ((uint64_t)configMAC_ADDR4 << 32) | \
                     ((uint64_t)configMAC_ADDR5 << 40))
#define TX_BUFFER_FREE_WAIT ( pdMS_TO_TICKS( 5UL ) )
#define MAX_TX_ATTEMPTS     ( 10 )
#define ipCONSIDER_FRAME_FOR_PROCESSING( pucEthernetBuffer ) eProcessBuffer
#define ipCONSIDER_FRAME_FOR_PROCESSING( pucEthernetBuffer ) eConsiderFrameForProcessing( ( pucEthernetBuffer ) )

static BaseType_t prvNetworkInterfaceInput(void)
{
  uint32_t xReceivedLength;
  uint8_t *pucBuffer;
  NetworkBufferDescriptor_t *pxDescriptor;
  const TickType_t xDescriptorWaitTime = pdMS_TO_TICKS( 250 );
  xIPStackEvent_t xRxEvent = { eNetworkRxEvent, NULL };

  xReceivedLength = XMC_ETH_MAC_GetRxFrameSize(&eth_mac);

  if ((xReceivedLength > 0) && (xReceivedLength <= XMC_ETH_MAC_BUF_SIZE))
  {
    pucBuffer = XMC_ETH_MAC_GetRxBuffer(&eth_mac);

    if (ipCONSIDER_FRAME_FOR_PROCESSING(pucBuffer))
    {
      pxDescriptor = pxGetNetworkBufferWithDescriptor(xReceivedLength, xDescriptorWaitTime);
      if (pxDescriptor != NULL)
      {
        memcpy(pxDescriptor->pucEthernetBuffer, pucBuffer, xReceivedLength);

        pxDescriptor->xDataLength = xReceivedLength;
        xRxEvent.pvData = ( void * )pxDescriptor;

        /* Pass the data to the TCP/IP task for processing. */
        if (xSendEventStructToIPTask( &xRxEvent, xDescriptorWaitTime ) == pdFALSE)
        {
          /* Could not send the descriptor into the TCP/IP stack, it must be released. */
          vReleaseNetworkBufferAndDescriptor(pxDescriptor);
          iptraceETHERNET_RX_EVENT_LOST();
        }
        else
        {
          iptraceNETWORK_INTERFACE_RECEIVE();
        }
      }
    }
  }

  XMC_ETH_MAC_ReturnRxDescriptor(&eth_mac);
  XMC_ETH_MAC_ResumeRx(&eth_mac);

	return ( xReceivedLength > 0 );

}

static BaseType_t prvNetworkInterfaceInput(void)
{
  uint32_t xReceivedLength;
  uint8_t *pucBuffer;
  NetworkBufferDescriptor_t *pxCurDescriptor;
  NetworkBufferDescriptor_t *pxNewDescriptor = NULL;

  xIPStackEvent_t xRxEvent = { eNetworkRxEvent, NULL };

  xReceivedLength = XMC_ETH_MAC_GetRxFrameSize(&eth_mac);
  if (xReceivedLength > 0)
  {
    /* Check if it is a valid frame */
    if (xReceivedLength <= ipTOTAL_ETHERNET_FRAME_SIZE)
    {
      pucBuffer = XMC_ETH_MAC_GetRxBuffer(&eth_mac);

      if (ipCONSIDER_FRAME_FOR_PROCESSING(pucBuffer))
      {
        /* Allocate a new network buffer descriptor that references an Ethernet
           frame large enough to hold the maximum network packet size (as defined
           in the FreeRTOSIPConfig.h header file). */
        pxNewDescriptor = pxGetNetworkBufferWithDescriptor(ipTOTAL_ETHERNET_FRAME_SIZE, 0);
        if (pxNewDescriptor != NULL)
        {
          XMC_ETH_MAC_SetRxBuffer(&eth_mac, pxNewDescriptor->pucEthernetBuffer);

			    pxCurDescriptor = pxPacketBuffer_to_NetworkBuffer( pucBuffer );
			    configASSERT( pxCurDescriptor != NULL );

          pxCurDescriptor->xDataLength = xReceivedLength;

          /*
           * The network buffer descriptor now points to the Ethernet buffer that
           * contains the received data, and the Ethernet DMA descriptor now points
           * to a newly allocated (and empty) Ethernet buffer ready to receive more
           * data.  No data was copied.  Only pointers to data were swapped.
           */

          xRxEvent.pvData = ( void * )pxCurDescriptor;

          /* Pass the data to the TCP/IP task for processing. */
          if (xSendEventStructToIPTask( &xRxEvent, xDescriptorWaitTime ) == pdFALSE)
          {
            /* Could not send the descriptor into the TCP/IP stack, it must be released. */
            vReleaseNetworkBufferAndDescriptor(pxCurDescriptor);
            iptraceETHERNET_RX_EVENT_LOST();
          }
          else
          {
            iptraceNETWORK_INTERFACE_RECEIVE();
          }
        }
        else
        {
          /* The event was lost because a network buffer was not available.
             Call the standard trace macro to log the occurrence. */
          iptraceETHERNET_RX_EVENT_LOST();
        }
      }
    }

    XMC_ETH_MAC_ReturnRxDescriptor(&eth_mac);
  }

  XMC_ETH_MAC_ResumeRx(&eth_mac);

	return ( xReceivedLength > 0 );

}

static void vClearTXBuffers()
{
  size_t uxCount = (( UBaseType_t)configNUM_TX_DESCRIPTORS) - uxSemaphoreGetCount(xTXDescriptorSemaphore);

  /* This function is called after a TX-completion interrupt.
     It will release each Network Buffer used in xNetworkInterfaceOutput().
     'uxCount' represents the number of descriptors given to DMA for transmission.
     After sending a packet, the DMA will clear the 'ETH_DMATXDESC_OWN' bit. */
  while ((uxCount > 0) && (XMC_ETH_MAC_IsTxDescriptorOwnedByDmaEx(&eth_mac, ulTxDescriptorToClear) == pdFALSE))
  {
#if( ipconfigZERO_COPY_TX_DRIVER != 0 )
    uint8_t *ucPayLoad = XMC_ETH_MAC_GetTxBufferEx(&eth_mac, ulTxDescriptorToClear);
    if( ucPayLoad != NULL )
    {
      NetworkBufferDescriptor_t *pxDescriptor = pxPacketBuffer_to_NetworkBuffer(ucPayLoad);
      if (pxDescriptor != NULL)
      {
        vReleaseNetworkBufferAndDescriptor(pxDescriptor);
      }
      XMC_ETH_MAC_SetTxBufferEx(&eth_mac, ulTxDescriptorToClear, 0);
    }
#endif

    /* Move onto the next descriptor, wrapping if necessary. */
    ulTxDescriptorToClear++;
    if (ulTxDescriptorToClear >= configNUM_TX_DESCRIPTORS )
    {
      ulTxDescriptorToClear = 0;
    }

    uxCount--;

    /* Tell the counting semaphore that one more TX descriptor is available. */
    xSemaphoreGive( xTXDescriptorSemaphore );
  }
}

BaseType_t xNetworkInterfaceInitialise( void )
{
  if (netif_task_handler == NULL)
  {
    if( xTXDescriptorSemaphore == NULL )
    {
      xTXDescriptorSemaphore = xSemaphoreCreateCounting( ( UBaseType_t ) configNUM_TX_DESCRIPTORS, ( UBaseType_t ) configNUM_TX_DESCRIPTORS );
      configASSERT( xTXDescriptorSemaphore );
    }

    /* Initialize network interfaces */
    if (xTaskCreate(netif_task, "netif_task", configMINIMAL_STACK_SIZE, NULL, configMAX_PRIORITIES - 1, &netif_task_handler) != pdPASS)
    {
      return pdFALSE;
    }

    // Configure ethernet port
    eth_mac.rx_desc = eth_rx_desc;
    eth_mac.tx_desc = eth_tx_desc;
#if( ipconfigZERO_COPY_RX_DRIVER == 0 )
    eth_mac.rx_buf = &eth_rx_buf[0][0];
#else
    eth_mac.rx_buf = NULL;
#endif
#if( ipconfigZERO_COPY_TX_DRIVER == 0 )
    eth_mac.tx_buf = &eth_tx_buf[0][0];
#else
    eth_mac.tx_buf = NULL;
#endif
    eth_mac.num_rx_buf = configNUM_RX_DESCRIPTORS;
    eth_mac.num_tx_buf = configNUM_TX_DESCRIPTORS;
    eth_mac.address = MAC_ADDR;

    XMC_ETH_MAC_InitEx(&eth_mac);
    XMC_ETH_MAC_DisableJumboFrame(&eth_mac);
    XMC_ETH_MAC_SetAddress(&eth_mac, eth_mac.address);

#if( ipconfigZERO_COPY_RX_DRIVER != 0 )
    for (int32_t index = 0; index < configNUM_RX_DESCRIPTORS; ++index)
    {
      NetworkBufferDescriptor_t *pxDescriptor = pxGetNetworkBufferWithDescriptor( ipTOTAL_ETHERNET_FRAME_SIZE, 0 );
      
      /* During start-up there should be enough Network Buffers available,
         so it is safe to use configASSERT().
         In case this assert fails, please check: configNUM_RX_DESCRIPTORS,
         ipconfigNUM_NETWORK_BUFFER_DESCRIPTORS, and in case BufferAllocation_2.c
         is included, check the amount of available heap. */
      configASSERT( pxDescriptor != NULL );

      XMC_ETH_MAC_SetRxBufferEx(&eth_mac, index, pxDescriptor->pucEthernetBuffer);
    }
#endif
  }

  if (xGetPhyLinkStatus() == pdFALSE)
  {
    if (link_status != XMC_ETH_LINK_STATUS_DOWN)
    {
      set_link_down();
      return pdFALSE;
    }
  }
  else
  {
    if (link_status != XMC_ETH_LINK_STATUS_UP)
    {
      set_link_up();

      /* When returning non-zero, the stack will become active and
         start DHCP (if configured) */
      return pdPASS;
    }
  }

  return pdFALSE;
}

BaseType_t xNetworkInterfaceOutput( NetworkBufferDescriptor_t * const pxNetworkBuffer, BaseType_t xReleaseAfterSend )
{
  uint8_t *buffer;
  const TickType_t xBlockTimeTicks = pdMS_TO_TICKS(50u);
  BaseType_t xReturn = pdFAIL;

  do
  {
    if (pxNetworkBuffer->xDataLength > XMC_ETH_MAC_BUF_SIZE)
    {
      break;
    }

    if (xTXDescriptorSemaphore == NULL)
    {
      break;
    }

    if (xSemaphoreTake(xTXDescriptorSemaphore, xBlockTimeTicks) != pdPASS)
    {
      /* Time-out waiting for a free TX descriptor. */
      break;
    }

    /* If the descriptor is still owned by the DMA it can't be used. */
    if (XMC_ETH_MAC_IsTxDescriptorOwnedByDma(&eth_mac))
    {
      /* The semaphore was taken, the TX DMA-descriptor is still not available.
         Actually that should not occur, the 'TDES_OWN' was already confirmed low in vClearTXBuffers(). */
      xSemaphoreGive( xTXDescriptorSemaphore );
    }
    else
    {
      buffer = XMC_ETH_MAC_GetTxBuffer(&eth_mac);
      memcpy((void *)buffer, pxNetworkBuffer->pucEthernetBuffer, pxNetworkBuffer->xDataLength);

      XMC_ETH_MAC_SetTxBufferSize(&eth_mac, pxNetworkBuffer->xDataLength);
      XMC_ETH_MAC_ReturnTxDescriptor(&eth_mac);
      XMC_ETH_MAC_ResumeTx(&eth_mac);

      iptraceNETWORK_INTERFACE_TRANSMIT();

      xReturn = pdPASS;
    }
  } while( 0 );

  /* The buffer has been sent so can be released. */
  if (xReleaseAfterSend != pdFALSE)
  {
    vReleaseNetworkBufferAndDescriptor( pxNetworkBuffer );
  }

  return xReturn;
}

BaseType_t xNetworkInterfaceOutput( NetworkBufferDescriptor_t * const pxDescriptor, BaseType_t xReleaseAfterSend )
{
  (void)xReleaseAfterSend;
  BaseType_t xReturn = pdFAIL;
  int32_t x;

  do
  {
    if (xTXDescriptorSemaphore == NULL)
    {
      break;
    }

  	for (x = 0; x < MAX_TX_ATTEMPTS; ++x)
    {
      if (xSemaphoreTake(xTXDescriptorSemaphore, 0) == pdPASS)
      {
  			break;
      }
      iptraceWAITING_FOR_TX_DMA_DESCRIPTOR();	
      vTaskDelay(TX_BUFFER_FREE_WAIT);
    }

    if (x == MAX_TX_ATTEMPTS)
    {
      break;
    }
    
    /* If the descriptor is still owned by the DMA it can't be used. */
    if (XMC_ETH_MAC_IsTxDescriptorOwnedByDma(&eth_mac))
    {
      /* The semaphore was taken, the TX DMA-descriptor is still not available.
         Actually that should not occur, the 'TDES_OWN' was already confirmed low in vClearTXBuffers(). */
      xSemaphoreGive( xTXDescriptorSemaphore );
    }
    else
    {
      XMC_ETH_MAC_SetTxBuffer(&eth_mac, pxDescriptor->pucEthernetBuffer);
      XMC_ETH_MAC_SetTxBufferSize(&eth_mac, pxDescriptor->xDataLength);

      XMC_ETH_MAC_ReturnTxDescriptor(&eth_mac);
      XMC_ETH_MAC_ResumeTx(&eth_mac);

      iptraceNETWORK_INTERFACE_TRANSMIT();

      xReturn = pdPASS;

    }
  } while(0);

  return xReturn;
}

BaseType_t xGetPhyLinkStatus(void)
{
  if (XMC_ETH_PHY_GetLinkStatus(&eth_mac, ETH_PHY_ADDR) != XMC_ETH_LINK_STATUS_DOWN)
  {
    return pdTRUE;
  }

  return pdFALSE;
}
